array.island.Island.scala.error
Compilation error:
Island:9: error: identifier expected but integer literal found.
    if (num[i] < num[i+1] && statut = 0) //debut de colline
                       ^Island:16: error: ']' expected but '}' found.
  }
  ^